# python-microservice-templates

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.yml
src/app/: asgi.py  main.py
src/app/api/: __init__.py
src/app/api/rest/: __init__.py  exception_handlers.py
src/app/api/rest/v1/: __init__.py
src/app/api/rest/v1/conversations/: __init__.py  endpoints.py  schemas.py
src/app/api/tasks/: __init__.py  stats.py
src/app/configs/: external_settings.py  internal_settings.py  settings.py
src/app/container/: container.py  wrappers.py
src/app/exceptions/: __init__.py  command.py  exceptions.py
src/app/infrastructure/: __init__.py  aClasses.py
src/app/infrastructure/database/: __init__.py  aClasses.py  postgres.py
src/app/infrastructure/database/migrations/: __init__.py  cli.py  config.py  manager.py  script.py.mako
src/app/infrastructure/database/migrations/versions/: dba91f4704aa_init.py
src/app/infrastructure/scheduler/: __init__.py  logs.py  manager.py  types.py
src/app/logs/: __init__.py  logger.py  types.py
src/app/middlewares/: __init__.py  request_context.py
src/app/models/: __init__.py  models.py
src/app/repositories/: __init__.py  aClasses.py  conversations.py  messages.py
src/app/service_layer/: __init__.py  aClasses.py  conversations.py  uow.py
src/app/utils/: orm.py  regex.py  schemas.py  timestamps.py  tokens.py
